src/Base/main/default/objects/GMBLASERP__Inventory_Transfer__c/fields/GMBLASERP__Inbound_Date__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Inbound_Date__c</fullName>
    <inlineHelpText>The date on which the Transfer was (or will be) received at the destination Warehouse.</inlineHelpText>
    <label>Inbound Date</label>
    <type>Date</type>
</CustomField>