src/Base/main/default/objects/GMBLASERP__Inventory_Transfer__c/fields/GMBLASERP__Outbound_Date__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Outbound_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>The date on which the Transfer departed from the origin Warehouse</inlineHelpText>
    <label>Outbound Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>