src/Base/main/default/objects/GMBLASERP__Inventory_Transfer__c/fields/GMBLASERP__Warehouse_From__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Warehouse_From__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse From</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Inventory Transfers FROM this Warehouse</relationshipLabel>
    <relationshipName>Inventory_Transfers_From</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>